tests/baselines/reference/interfaceExtendingClass2.errors.txt
==== tests/cases/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass2.ts (6 errors) ====
    class Foo {
        x: string;
        y() { }
        get Z() {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 1;
        }
        [x: string]: Object;
    }
    
    interface I2 extends Foo { // error
        a: {
        ~~~~
            toString: () => {
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property 'a' of type '{ toString: () => {}; }' is not assignable to string index type 'Object'.
                return 1;
                ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
                ~~~~~~
!!! error TS1131: Property or signature expected.
            };
            ~
!!! error TS1128: Declaration or statement expected.
        }
        ~
!!! error TS1128: Declaration or statement expected.